--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -2,7 +2,10 @@
     <div class="container">
       <h1 class="title">{{ page.title }} {% if page.tagline %} <br/><small class="subtitle">{{ page.tagline }}</small>{% endif %}</h1>
       <div class="options">
+        <!---
         <a class="btn btn-lg btn-primary" href="https://github.com/dotnet/orleans">Get the code</a> <a class="btn btn-lg btn-primary" href="What's-new-in-Orleans">Read the documentation</a>
+        --->
+        <a class="btn btn-lg btn-primary" href="https://github.com/dotnet/orleans">获取代码</a> <a class="btn btn-lg btn-primary" href="What's-new-in-Orleans">阅读文档</a>
       </div>
     </div>
 </div>
