--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,99 +1,164 @@
 
 
 
-<h2 id="getting-started-guide">Getting Started Guide</h2>
+<h2 id="getting-started-guide">入门指南</h2>
+<!--<h2 id="getting-started-guide">Getting Started Guide</h2>-->
 <ul class="list-unstyled">
-	<li><a href="/orleans/Introduction">Introduction</a></li>
-	<li><a href="/orleans/Benefits">Main Benefits</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Grains">Grains</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Silos">Silos</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Clients">Clients</a></li>
-	<li><a href="/orleans/Frequently-Asked-Questions">Frequently Asked Questions</a></li>
+	<li><a href="/orleans/Introduction">简介</a></li>
+	<li><a href="/orleans/Benefits">主要优点</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Grains">Grain</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Silos">Silo</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Clients">Client</a></li>
+	<li><a href="/orleans/Frequently-Asked-Questions">常见问题</a></li>
+	<!--<li><a href="/orleans/Introduction">Introduction</a></li>-->
+	<!--<li><a href="/orleans/Benefits">Main Benefits</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Grains">Grains</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Silos">Silos</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Clients">Clients</a></li>-->
+	<!--<li><a href="/orleans/Frequently-Asked-Questions">Frequently Asked Questions</a></li>-->
 </ul>
 
-<h2 id="installation">Installation</h2>
+<h2 id="installation">安装</h2>
+<!--<h2 id="installation">Installation</h2>-->
 
 <ul class="list-unstyled">
-	<li><a href="/orleans/Prerequisites">Prerequisites</a></li>
+	<li><a href="/orleans/Prerequisites">必备条件</a></li>
 	<li><a href="https://visualstudiogallery.msdn.microsoft.com/36903961-63bd-4eec-9ca4-cf2319dc75f4">Orleans Tools for Visual Studio</a></li>		
 	<li><a href="https://visualstudiogallery.msdn.microsoft.com/b61c87e7-0655-4a6e-8e4f-84192950e08c">Templates from BigPark</a></li>
 	<li><a href="/orleans/NuGets">Orleans NuGet Packages</a></li>
 	<li><a href="/orleans/What&#x27;s-new-in-Orleans">What&#39;s new in Orleans?</a></li>
+	<!--<li><a href="/orleans/Prerequisites">Prerequisites</a></li>-->
+	<!--<li><a href="https://visualstudiogallery.msdn.microsoft.com/36903961-63bd-4eec-9ca4-cf2319dc75f4">Orleans Tools for Visual Studio</a></li>		-->
+	<!--<li><a href="https://visualstudiogallery.msdn.microsoft.com/b61c87e7-0655-4a6e-8e4f-84192950e08c">Templates from BigPark</a></li>-->
+	<!--<li><a href="/orleans/NuGets">Orleans NuGet Packages</a></li>-->
+	<!--<li><a href="/orleans/What&#x27;s-new-in-Orleans">What&#39;s new in Orleans?</a></li>-->
 </ul>
-<h2 id="programmers-guide">Programmer's Guide</h2>
+<h2 id="programmers-guide">编程指南</h2>
+<!--<h2 id="programmers-guide">Programmer's Guide</h2>-->
 <ul class="list-unstyled">
-	<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Grain">Developing a Grain</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Grain-Persistence">Grain Persistence</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Client">Developing a Client</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Observers">Client Observers</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Running-the-Application">Running the Application</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Application-Bootstrap-within-a-Silo">Application Bootstrap within a Silo</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Timers-and-Reminders">Timers and Reminders</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Grain">开发一个Grain</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Grain-Persistence">Grain持久化</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Client">开发一个Client</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Observers">Client观察者</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Running-the-Application">运行应用</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Application-Bootstrap-within-a-Silo">silo中应用的初始化</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Timers-and-Reminders">Timers和Reminders</a></li>
 	<li><a href="/orleans/Orleans-Streams">Orleans Streams</a></li>
-	<li><a href="/orleans/Getting-Started-With-Orleans/Debugging">Debugging and Symbols</a></li>
-	<li><a href="/orleans/Troubleshooting-Deployment">Troubleshooting Deployment</a></li>
+	<li><a href="/orleans/Getting-Started-With-Orleans/Debugging">调试和调试符号</a></li>
+	<li><a href="/orleans/Troubleshooting-Deployment">部署故障排除</a></li>
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Grain">Developing a Grain</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Grain-Persistence">Grain Persistence</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Developing-a-Client">Developing a Client</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Observers">Client Observers</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Running-the-Application">Running the Application</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Application-Bootstrap-within-a-Silo">Application Bootstrap within a Silo</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Timers-and-Reminders">Timers and Reminders</a></li>-->
+	<!--<li><a href="/orleans/Orleans-Streams">Orleans Streams</a></li>-->
+	<!--<li><a href="/orleans/Getting-Started-With-Orleans/Debugging">Debugging and Symbols</a></li>-->
+	<!--<li><a href="/orleans/Troubleshooting-Deployment">Troubleshooting Deployment</a></li>-->
 
 </ul>
 
-<h2 id="introduction-and-tutorials">Tutorials</h2>
+<h2 id="introduction-and-tutorials">教学</h2>
+<!--<h2 id="introduction-and-tutorials">Tutorials</h2>-->
 <ul class="list-unstyled">
-	<li><a href="/orleans/Step-by-step-Tutorials">Step-by-step Tutorials</a></li>
-	<li><a href="/orleans/Samples-Overview">Samples Overview</a></li>
+	<li><a href="/orleans/Step-by-step-Tutorials">手把手教程</a></li>
+	<li><a href="/orleans/Samples-Overview">示例概览</a></li>
+	<!--<li><a href="/orleans/Step-by-step-Tutorials">Step-by-step Tutorials</a></li>-->
+	<!--<li><a href="/orleans/Samples-Overview">Samples Overview</a></li>-->
 </ul>
 
-<h2 id="configuration">Configuration</h2>
+<h2 id="configuration">配置</h2>
+<!--<h2 id="configuration">Configuration</h2>-->
 <ul class="list-unstyled">
-	<li><a href="/orleans/Orleans-Configuration-Guide">Configuration Guide </a></li>
-	<li><a href="/orleans/Deployment-and-Versioning-of-Dependencies">Deployment and Versioning of Dependencies</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Configuring-SQL-Tables">Configuring SQL Tables</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Configuring-.NET-Garbage-Collection">Configuring .NET Garbage Collection</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Activation-Garbage-Collection">Activation Garbage Collection</a></li>
+	<li><a href="/orleans/Orleans-Configuration-Guide">配置指南</a></li>
+	<li><a href="/orleans/Deployment-and-Versioning-of-Dependencies">部署和版本依赖</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Configuring-SQL-Tables">配置SQL表</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Configuring-.NET-Garbage-Collection">配置.NET垃圾回收</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Activation-Garbage-Collection">Activation垃圾回收</a></li>
+	<!--<li><a href="/orleans/Orleans-Configuration-Guide">Configuration Guide </a></li>-->
+	<!--<li><a href="/orleans/Deployment-and-Versioning-of-Dependencies">Deployment and Versioning of Dependencies</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Configuring-SQL-Tables">Configuring SQL Tables</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Configuring-.NET-Garbage-Collection">Configuring .NET Garbage Collection</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Activation-Garbage-Collection">Activation Garbage Collection</a></li>-->
 </ul>
 
-<h2 id="advanced-documentation">Advanced Documentation</h2>
+<h2 id="advanced-documentation">高级文档</h2>
+<!--<h2 id="advanced-documentation">Advanced Documentation</h2>-->
 
 <ul class="list-unstyled">
-	<li><a href="/orleans/Advanced-Concepts/Using-Immutable-to-Optimize-Copying">Using Immutable to Optimize Copying</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Serialization">Serialization and Writing Custom Serializers</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Reentrant-Grains">Reentrant Grains</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Request-Context">Request Context</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Runtime-Monitoring">Runtime Monitoring</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Interceptors">Interceptors</a></li>
-	<li><a href="/orleans/Advanced-Concepts/Using-Azure-Web-Apps">Using Azure Web Apps</a></li>
-	<li><a href="/orleans/Advanced-Concepts/External-Tasks-and-Grains">External Tasks and Grains</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Cluster-Management">Cluster Management</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Messaging-Delivery-Guarantees">Messaging Delivery Guarantees</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Runtime-Tables">Runtime Tables</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Relational-Storage">Relational Storage</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Consul-Deployment">Consul Deployment</a></li>
-	<li><a href="/orleans/Runtime-Implementation-Details/Load-Balancing">Load Balancing</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Using-Immutable-to-Optimize-Copying">使用不变量优化复制</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Serialization">序列化和开发自定义的序列其</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Reentrant-Grains">可重入的Grains</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Request-Context">请求上下文</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Runtime-Monitoring">运行时监测</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Interceptors">拦截器</a></li>
+	<li><a href="/orleans/Advanced-Concepts/Using-Azure-Web-Apps">使用Azure Web Apps</a></li>
+	<li><a href="/orleans/Advanced-Concepts/External-Tasks-and-Grains">外部Task和Grain</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Cluster-Management">集群管理</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Messaging-Delivery-Guarantees">消息传递的保证</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Runtime-Tables">运行时的表</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Relational-Storage">关系存储</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Consul-Deployment">Consul部署</a></li>
+	<li><a href="/orleans/Runtime-Implementation-Details/Load-Balancing">负载均衡</a></li>
+	<!--<li><a href="/orleans/Advanced-Concepts/Using-Immutable-to-Optimize-Copying">Using Immutable to Optimize Copying</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Serialization">Serialization and Writing Custom Serializers</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Reentrant-Grains">Reentrant Grains</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Request-Context">Request Context</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Runtime-Monitoring">Runtime Monitoring</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Interceptors">Interceptors</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/Using-Azure-Web-Apps">Using Azure Web Apps</a></li>-->
+	<!--<li><a href="/orleans/Advanced-Concepts/External-Tasks-and-Grains">External Tasks and Grains</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Cluster-Management">Cluster Management</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Messaging-Delivery-Guarantees">Messaging Delivery Guarantees</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Runtime-Tables">Runtime Tables</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Relational-Storage">Relational Storage</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Consul-Deployment">Consul Deployment</a></li>-->
+	<!--<li><a href="/orleans/Runtime-Implementation-Details/Load-Balancing">Load Balancing</a></li>-->
 </ul>
 
-<h2 id="community-and-contributions">Community and Contributions</h2>
+<h2 id="community-and-contributions">社区和贡献</h2>
+<!--<h2 id="community-and-contributions">Community and Contributions</h2>-->
 
 <ul class="list-unstyled">
-	<li><a href="https://github.com/OrleansContrib">OrleansContrib - Community add-ons to Orleans</a></li>
-	<li><a href="https://github.com/OrleansContrib/meetups">Orleans Community Virtual Meetups</a></li>
-	<li><a href="https://gitter.im/dotnet/orleans">Orleans Gitter Chat Forum</a></li>
+	<li><a href="https://github.com/OrleansContrib">OrleansContrib - 社区提供的Orleans插件</a></li>
+	<li><a href="https://github.com/OrleansContrib/meetups">Orleans社区在线会议记录</a></li>
+	<li><a href="https://gitter.im/dotnet/orleans">Orleans Gitter聊天室</a></li>
 	<li><a href="https://twitter.com/projectorleans">Twitter - @ProjectOrleans</a></li>
-	<li><a href="https://orleans.codeplex.com">Orleans on Codeplex (Historical)</a></li> 
+	<li><a href="https://orleans.codeplex.com">Orleans on Codeplex (历史遗产)</a></li> 
 	<li><a href="http://stackoverflow.com/questions/tagged/orleans">Orleans on StackOverflow</a></li>
-	<li><a href="/orleans/Who-Is-Using-Orleans">Who Is Using Orleans?</a></li>
+	<li><a href="/orleans/Who-Is-Using-Orleans">谁在使用Orleans？</a></li>
+	<!--<li><a href="https://github.com/OrleansContrib">OrleansContrib - Community add-ons to Orleans</a></li>-->
+	<!--<li><a href="https://github.com/OrleansContrib/meetups">Orleans Community Virtual Meetups</a></li>-->
+	<!--<li><a href="https://gitter.im/dotnet/orleans">Orleans Gitter Chat Forum</a></li>-->
+	<!--<li><a href="https://twitter.com/projectorleans">Twitter - @ProjectOrleans</a></li>-->
+	<!--<li><a href="https://orleans.codeplex.com">Orleans on Codeplex (Historical)</a></li> -->
+	<!--<li><a href="http://stackoverflow.com/questions/tagged/orleans">Orleans on StackOverflow</a></li>-->
+	<!--<li><a href="/orleans/Who-Is-Using-Orleans">Who Is Using Orleans?</a></li>-->
 </ul>
 
-<h2 id="contributing-to-this-project">Contributing To This Project</h2>
+<h2 id="contributing-to-this-project">为该项目做出贡献</h2>
+<!--<h2 id="contributing-to-this-project">Contributing To This Project</h2>-->
 
 <ul class="list-unstyled">
-	<li><a href="/orleans/Contributing">Contribution Guide</a></li>
-	<li><a href="https://github.com/dotnet/orleans/issues">GitHub Issues List</a></li>
+	<li><a href="/orleans/Contributing">贡献指南</a></li>
+	<li><a href="https://github.com/dotnet/orleans/issues">GitHub Issues</a></li>
+	<!--<li><a href="/orleans/Contributing">Contribution Guide</a></li>-->
+	<!--<li><a href="https://github.com/dotnet/orleans/issues">GitHub Issues List</a></li>-->
 </ul>
 
-<h2 id="other-documentation-resources">Other Documentation Resources</h2>
+<h2 id="other-documentation-resources">其他文档资源</h2>
+<!--<h2 id="other-documentation-resources">Other Documentation Resources</h2>-->
 
 <ul class="list-unstyled">
-	<li><a href="http://research.microsoft.com/projects/orleans/">Microsoft Research Project Orleans Home Page</a></li>
-	<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=210931">Orleans Technical Report</a></li>
-	<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=244727">Orleans Best Practices</a></li>
-	<li><a href="/orleans/Links">Links</a></li>
-	<li><a href="/orleans/Presentations">Presentations</a></li>
+	<li><a href="http://research.microsoft.com/projects/orleans/">Microsoft Research Project Orleans主页</a></li>
+	<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=210931">关于Orleans的科技报道</a></li>
+	<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=244727">Orleans最佳时间</a></li>
+	<li><a href="/orleans/Links">链接</a></li>
+	<li><a href="/orleans/Presentations">简报</a></li>
+	<!--<li><a href="http://research.microsoft.com/projects/orleans/">Microsoft Research Project Orleans Home Page</a></li>-->
+	<!--<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=210931">Orleans Technical Report</a></li>-->
+	<!--<li><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=244727">Orleans Best Practices</a></li>-->
+	<!--<li><a href="/orleans/Links">Links</a></li>-->
+	<!--<li><a href="/orleans/Presentations">Presentations</a></li>-->
 </ul>
